<resources>
    <string name="app_name">Code1229</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_search">&#xf002;</string>
    <string name="fa_hashtag">&#xf292;</string>
    <string name="fa_camera_retro">&#xf083;</string>
    <string name="fa_camera">&#xf030;</string>
    <string name="fa_circle_o">&#xf10c;</string>
    <string name="fa_map_marker">&#xf041;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_close">&#xf00d;</string>
    <string name="fa_refresh">&#xf021;</string>
    <string name="fa_bolt">&#xf0e7;</string>
    <string name="fa_arrow_right">&#xf061;</string>
    <string name="fa_circle">&#xf111;</string>
    <string name="fa_video_camera">&#xf03d;</string>
    <string name="fa_frown_o">&#xf119;</string>
    <string name="fa_smile_o">&#xf118;</string>
    <string name="fa_heart">&#xf004;</string>
    <string name="fa_heart_o">&#xf08a;</string>
    <string name="fa_thumbs_up">&#xf164;</string>
    <string name="fa_thumbs_o_up">&#xf087;</string>
    <string name="fa_thumbs_down">&#xf165;</string>
    <string name="fa_thumbs_o_down">&#xf088;</string>
    <string name="fa_comment">&#xf075;</string>
    <string name="fa_comment_o">&#xf0e5;</string>
    <string name="fa_angle_down">&#xf107;</string>
    <string name="fa_angle_up">&#xf106;</string>
    <string name="fa_cloud">&#xf0c2;</string>
    <string name="fa_sun_o">&#xf185;</string>
    <string name="fa_angle_left">&#xf104;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_check_circle_o">&#xf05d;</string>
    <string name="fa_share_square">&#xf14d;</string>
    <string name="fa_share_square_o">&#xf045;</string>
    <string name="fa_th_large">&#xf009;</string>
    <string name="fa_th_list">&#xf00b;</string>
    <string name="fa_mars">&#xf222;</string>
    <string name="fa_venus">&#xf221;</string>
    <string name="fa_mars_double">&#xf227;</string>
    <string name="fa_venus_double">&#xf226;</string>
    <string name="fa_venus_mars">&#xf228;</string>
    <string name="fa_certificate">&#xf0a3;</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登陆</string>
    <string name="follow">＋ 关注</string>
    <string name="unfollow">√ 已关注</string>
</resources>
