<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/jiehuang"
        android:baselineAligned="false">

        <RelativeLayout
            android:id="@+id/rl_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_home"
                android:textColor="@color/xuese"
                android:textSize="@dimen/tv_ic_size" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_search"
                android:textColor="@color/xuese"
                android:textSize="@dimen/tv_ic_size" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_camera_retro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_camera_retro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_camera_retro"
                android:textColor="@color/baicaoshuang"
                android:textSize="@dimen/tv_ic_size" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_comment"
                android:textColor="@color/xuese"
                android:textSize="@dimen/tv_ic_size" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_user"
                android:textColor="@color/xuese"
                android:textSize="@dimen/tv_ic_size" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>