<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom_tianqing"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/_10dp"
            android:paddingTop="@dimen/_10dp">

            <TextView
                android:id="@+id/tvIcAngleLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/_10dp"
                android:paddingStart="@dimen/_10dp"
                android:text="@string/fa_angle_left"
                android:textColor="@color/tianqing"
                android:textSize="@dimen/_20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="登陆"
                android:textColor="@color/tianqing"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom_border"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etUsername"
                style="@style/edit_text_common_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="用户名或电子邮箱"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@null" />

            <TextView
                android:id="@+id/tvClearUsername"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fa_close"
                android:textColor="@color/fanqiehong"
                android:textSize="@dimen/_20sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom_border"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etPwd"
                style="@style/edit_text_common_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="密码"
                android:inputType="textPassword"
                android:textCursorDrawable="@null" />

            <TextView
                android:id="@+id/tvClearPwd"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fa_close"
                android:textColor="@color/fanqiehong"
                android:textSize="@dimen/_20sp"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:alpha="0"
        android:background="@color/tianqing"
        android:text="@string/login"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold" />

</RelativeLayout>